added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -15,8 +16,8 @@
       <section class ="card" id="id-section">
         <h2>HTML</h2>
         <ul>
+          <li class="first">The html is the framework for the webpage - it describes the structure, labelling different elements</li>
           <li>Semantic HTML elements indicate the role of their content and give structure to the content of the webpage</li>
-          <li>The html is the framework for the webpage - it describes the structure, labelling different elements</li>
           <li>The head element contains information about the webpage, but is not visible to the user</li>
           <li>The meta element goes in the head and provides information to the browser about how the page will be rendered</li>
           <li>The head element can also contain other attributes, such as the language of the site, who made the site, and the title, which is important for SEO</li>
@@ -27,16 +28,24 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>notes about CSS will go here</li>
+          <li class="first">Cascading Style Sheets (CSS) is the language used to style an HTML document and describes how HTML elements should be displayed</li>
+          <li>There are multiple ways to introduce CSS - inline, internal and external</li>
+          <li>'Inline style' changes the attributes of a single element</li>
+          <li>An 'internal style sheet' is embedded in the head, and contains rules for that webpage</li>
+          <li>'External css style sheet' is the most common way to style a website - it keeps design rules together and makes changes easier. It is referenced with a link element in the HTML head</li>
+          <li>There are a wide variety of CSS selectors available, allowing precise selection and styling of elements, some selectors include: type, class, ID and attribute selectors</li>
+          <li>In a CSS sheet, styling elements applies to the entire page. Styling class attributes applies to specific parts of the page and can be done by creating a selector</li>
+          <li>Everything in CSS has a box around it, and understanding these boxes is key to being able to create layouts with CSS, or to align items with other items.</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>Padding indicates how much space we want around the content inside an element</li>
         </ul>
       </section>
      
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>Working with git allows different developers to work on the same project concurrently</li>
+          <li class="first">Working with git allows different developers to work on the same project concurrently - it allows version control and avoids conflicts or sync errors</li>
           <li>It is essential to work on new branches when making any changes to a project, they can then be checked and merged with the main branch without over-writing work</li>
-          <li>GitHub allows version control, concurrent working, and avoids conflicts or sync errors</li>
           <li>Frequently sync the local version with the remote version in GitHub so a functional, updated version of the project can be shared and accessed by all team members</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b <i>new-branch-name</i>: creates a new branch and switches to it. Use conventions when naming, for example <i>feature/detail</i></li>
