<added JavaScript sheet to introduce console functionality.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class ="card" id="id-section">
         <h2>HTML</h2>
         <ul>
-          <li class="first">The html is the framework for the webpage - it describes the structure, labelling different elements</li>
+          <li>The html is the framework for the webpage - it describes the structure, labelling different elements</li>
           <li>Semantic HTML elements indicate the role of their content and give structure to the content of the webpage</li>
           <li>The head element contains information about the webpage, but is not visible to the user</li>
           <li>The meta element goes in the head and provides information to the browser about how the page will be rendered</li>
@@ -28,7 +29,7 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li class="first">Cascading Style Sheets (CSS) is the language used to style an HTML document and describes how HTML elements should be displayed</li>
+          <li>Cascading Style Sheets (CSS) is the language used to style an HTML document and describes how HTML elements should be displayed</li>
           <li>There are multiple ways to introduce CSS - inline, internal and external</li>
           <li>'Inline style' changes the attributes of a single element</li>
           <li>An 'internal style sheet' is embedded in the head, and contains rules for that webpage</li>
@@ -44,7 +45,7 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li class="first">Working with git allows different developers to work on the same project concurrently - it allows version control and avoids conflicts or sync errors</li>
+          <li>Working with git allows different developers to work on the same project concurrently - it allows version control and avoids conflicts or sync errors</li>
           <li>It is essential to work on new branches when making any changes to a project, they can then be checked and merged with the main branch without over-writing work</li>
           <li>Frequently sync the local version with the remote version in GitHub so a functional, updated version of the project can be shared and accessed by all team members</li>
           <li>git status: checks what branch we are currently on</li>
@@ -68,5 +69,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
