--- a/index.html
+++ b/index.html
@@ -61,7 +61,25 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>notes about JavaScript will go here</li>
+          <li>Javascript adds interactivity to a static HTML/CSS page</li>
+          <li>It is a scripting language that enables you to create dynamically updating content, control multimedia, animate images, and many many other things</li>
+          <li>Basic JavaScript features include variables, strings and data types</li>
+          <li>Control flow is the order in which a computer executes code in a JavaScript file</li>
+          <li>Understanding control flow allows conditional logic to be added to the Prework Study Guide</li>
+          <li>Arrays can be used to store data types in JavaScript, they can be thought of as how to store a group of related data in a variable</li>
+          <li>A for loop can be used to operate on each element in an array</li>
+          <li>Do not add your .js link to the header, it needs to load after the html so place it at the bottom of the body, before closing the tag</li>
+          <li>JavaScript can store useful values inside variables</li>
+          <li>It can perform operations on pieces of text (known as "strings")</li>
+          <li>It can run a code in response to certain events</li>
+          <li>Order really matters: the objects referenced have to exist before doing anything to them</li>
+          <li>Variables are containers that store values, or put another way, it is a named container that allows us to store data in our code</li>
+          <li>One way to declare a variable is to use the var keyword followed by a unique name</li>
+          <li>The equals sign is the assignment variable to assign specific data</li>
+          <li>Quotation marks denote a string</li>
+          <li>An if statement is a way of introducing decision-making into our code. For more than one condition, use else if</li>
+          <li>Comments with line breaks have an asterisk and a forward slash; without line breaks two forward slashes can be used</li>
+          <li>At the most basic level, a function is simply a set of instructions that tells the computer how to perform a certain task, they execute when called by name, unlike for loops and conditional statements, which automatically execute</li>
         </ul>
       </section>
     </main>
